--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="contact-info">
       <p class="roboto-light">Olaf Ammer</p>
       <p class="roboto-light">CEO | Founder</p>
-      <p class="roboto-light">Phone: <a href="tel:+48606303003">+48 606 303 003</a></p>
+      <p class="roboto-light">Telefon: <a href="tel:+48606303003">+48 606 303 003</a></p>
       <p class="roboto-light">Email: <a href="mailto:info@ammerhouse.com">info&#64;ammerhouse.com</a></p>
     </div>
   </div>
